# cmakeExamples

helloworld/: CMakeLists.txt
helloworld/lib/: CMakeLists.txt  hello.c  hello.h
helloworld/src/: CMakeLists.txt  main.c
opencvfacerec/: CMakeLists.txt
opencvfacerec/include/: decomposition.hpp  facerec.hpp
opencvfacerec/src/: facerec.cpp  helper.cpp  subspace.cpp
