SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
ADD_LIBRARY(hello_lib STATIC hello.c)
SET_TARGET_PROPERTIES(hello_lib PROPERTIES OUTPUT_NAME "hello")
SET_TARGET_PROPERTIES(hello_lib PROPERTIES CLEAN_DIRECT_OUTPUT 1)

ADD_LIBRARY(hello_dll SHARED hello.c)
SET_TARGET_PROPERTIES(hello_dll PROPERTIES OUTPUT_NAME "hello")
SET_TARGET_PROPERTIES(hello_dll PROPERTIES CLEAN_DIRECT_OUTPUT 1)